--- a/css/master.css
+++ b/css/master.css
@@ -55,6 +55,22 @@
 
 }
 
+/* Start Deleted class */
+.deleted-task {
+  border-bottom: none;
+  opacity: 0.3;
+}
+
+.deleted-text
+{
+text-decoration: line-through;
+}
+.cursor-nodrop {
+  cursor: no-drop;
+}
+
+/* End Deleted class */
+
 /* End Components */
 /* Start Global Rules */
 * {
@@ -100,9 +116,9 @@ h6 {
   margin: 0;
 }
 
-/* Main wrapper */
+/* Start Main Wrapper */
 .main-wrapper {
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 15px;
 }
 
@@ -113,6 +129,7 @@ h6 {
 
 }
 
+/* End Main Wrapper */
 /* End Global Rules */
 .page {
   background-color: var(--page-color);
@@ -174,6 +191,7 @@ aside ul li a {
 aside ul li a:hover,
 aside ul li a.active {
   background-color: #f6f6f6;
+  color: var(--blue-color);
 }
 
 @media (min-width: 768px) {
@@ -197,7 +215,7 @@ aside ul li a.active {
 
 /* End sidebar */
 
-/* Start main content */
+/* Start Top Bar */
 main {
   overflow: hidden;
 }
@@ -250,6 +268,7 @@ main {
   margin-left: 15px;
 }
 
+/* End Top Bar */
 /* Start Welcome section */
 .welcome {
   overflow: hidden;
@@ -339,8 +358,15 @@ main {
   height: 80px;
 }
 
+@media (max-width: 767px) {
+  .details .target-row .icon {
+    width: 62px;
+    height: 62px;
+  }
+}
+
 .details .target-row .icon.blue,
-.details .progress.blue  {
+.details .progress.blue {
   background-color: rgb(0 117 255 / 20%);
 }
 
@@ -356,8 +382,7 @@ main {
   background-color: rgb(34 197 94 / 20%);
 }
 
-.details .target-row .icon .blue
-{
+.details .target-row .icon .blue {
   color: var(--blue-color);
 }
 
@@ -368,22 +393,28 @@ main {
 .details .target-row .icon i.green {
   color: var(--green-color);
 }
+
 .details .progress {
   height: 3px;
 }
-.details .progress > span {
+
+.details .progress>span {
   height: 100%;
 }
+
 .details .progress .blue {
   background-color: var(--blue-color);
 }
+
 .details .progress .orange {
   background-color: var(--orange-color);
 }
+
 .details .progress .green {
   background-color: var(--green-color);
 }
-.details .progress > span > span {
+
+.details .progress>span>span {
   right: 0;
   bottom: 18px;
   transform: translateX(50%);
@@ -392,7 +423,8 @@ main {
   color: white;
   padding: 3px 5px;
 }
-.details .progress > span > span::before {
+
+.details .progress>span>span::before {
   content: "";
   position: absolute;
   right: 2px;
@@ -402,15 +434,102 @@ main {
   border-style: solid;
   border-width: 8px;
 }
-.details .progress > span > span.blue::before {
+
+.details .progress>span>span.blue::before {
   border-top-color: var(--blue-color);
 }
-.details .progress > span > span.orange::before {
+
+.details .progress>span>span.orange::before {
   border-top-color: var(--orange-color);
 }
-.details .progress > span > span.green::before {
+
+.details .progress>span>span.green::before {
   border-top-color: var(--green-color);
 }
 
 /* End Yearly Target */
-/* End main content */
+/* Start stat */
+
+
+.stat .stat-content .stat-item {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .stat .stat-content {
+    gap: 4%;
+  }
+
+  .stat .stat-content .stat-item {
+    flex-basis: 48%;
+  }
+}
+
+.stat .stat-content .stat-item:first-child .list-icon {
+  color: var(--orange-color);
+}
+
+.stat .stat-content .stat-item:nth-child(2) .pending-icon {
+  color: var(--blue-color);
+}
+
+.stat .stat-content .stat-item:nth-child(3) .closed-icon {
+  color: var(--green-color);
+}
+
+.stat .stat-content .stat-item:last-child .delete-icon {
+  color: var(--red-color);
+}
+
+/* End stat */
+/* Start latest News */
+.news-item:not(:last-child) {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #eee;
+}
+
+@media (max-width: 767px) {
+  .news-item {
+    flex-direction: column;
+  }
+
+  .news-item .news-text {
+    text-align: center;
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+
+.news-item .image img {
+  width: 82px;
+  max-width: 100%;
+}
+
+@media (max-width: 767px) {
+  .news-item .image img {
+    width: 172px;
+  }
+
+}
+
+.news-item .news-text>div .news-title {
+  font-size: 16px;
+}
+
+.news-item .news-text>div .news-title+span {
+  font-size: 13px;
+}
+
+/* End latest News */
+/* Start Latest-tasks */
+
+.latest-tasks .task:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+
+
+
+/* End Latest-tasks */
