--- a/css/framework.css
+++ b/css/framework.css
@@ -61,7 +61,9 @@
 .d-grid {
   display: grid;
 }
-
+.gap-5 {
+  gap: 5px;
+}
 .gap-10 {
   gap: 10px;
 }
@@ -77,7 +79,9 @@
 .grow-1 {
   flex-grow: 1;
 }
-
+.shrink-0 {
+  flex-shrink: 0;
+}
 .w-full {
   width: 100%;
 }
@@ -125,6 +129,9 @@
 .pl-10 {
   padding-left: 10px;
 }
+.pl-20 {
+  padding-left: 20px;
+}
 
 @media (max-width: 767px) {
   .p-8-mobile {
@@ -159,7 +166,9 @@
 .mt-15 {
   margin-top: 15px;
 }
-
+.mt-25 {
+  margin-top: 25px;
+}
 .mt-30 {
   margin-top: 30px;
 }
@@ -171,7 +180,15 @@
 .mr-5 {
   margin-right: 5px;
 }
-
+.mr-10 {
+  margin-right: 10px;
+}
+.mr-15 {
+  margin-right: 15px;
+}
+.mr-20 {
+  margin-right: 20px;
+}
 .mb-0 {
   margin-bottom: 0;
 }
@@ -198,7 +215,9 @@
 .mb-25 {
   margin-bottom: 25px;
 }
-
+.mb-30 {
+  margin-bottom: 30px;
+}
 .ml-5 {
   margin-left: 5px;
 }
@@ -276,8 +295,14 @@
 .fs-14 {
   font-size: 14px;
 }
+.fs-15 {
+  font-size: 15px;
+}
 .fs-16 {
   font-size: 16px;
+}
+.fs-17 {
+  font-size: 17px;
 }
 .fs-18 {
   font-size: 18px;
@@ -294,7 +319,12 @@
 .fs-30 {
   font-size: 30px;
 }
-
+.fw-500 {
+  font-weight: 500;
+}
+.fw-600 {
+  font-weight: 600;
+}
 .fw-b {
   font-weight: bold;
 }
@@ -342,12 +372,16 @@
   justify-content: space-between;
 }
 
-.center-flex {
+.center-flex,
+.center-flex-inline {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.center-flex-inline {
+  display: inline-flex;
 
+}
 .btn-shape {
   padding: 5px 10px;
   border-radius: 6px;
