--- a/css/framework.css
+++ b/css/framework.css
@@ -121,6 +121,9 @@
 .pb-20 {
   padding-bottom: 20px;
 }
+.pb-30 {
+  padding-bottom: 30px;
+}
 
 .pl-5 {
   padding-left: 5px;
@@ -132,7 +135,9 @@
 .pl-20 {
   padding-left: 20px;
 }
-
+.pl-30 {
+  padding-left: 30px;
+}
 @media (max-width: 767px) {
   .p-8-mobile {
     padding: 8px;
@@ -414,9 +419,10 @@
 .c-pointer {
   cursor: pointer;
 }
-
-.trans-hov-fx:hover {
+.trans-hov-fx {
   transition: 0.3s;
+}
+.trans-hov-fx:hover {
   background-color: var(--blue-alt-color);
 }
 
