--- a/css/master.css
+++ b/css/master.css
@@ -1088,7 +1088,7 @@ main {
 }
 
 .profile-container .profile-info .info-row:not(:last-child) {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #eee;
 }
 
 @media (min-width: 768px) {
@@ -1129,17 +1129,50 @@ main {
   flex-grow: 1.5;
 }
 
+.skills-activities-container .skills .skills-list li span:not(:last-child) {
+  display: inline-flex;
+  margin-right: 5px;
+}
+
+.skills-activities-container .skills .skills-list li:not(:last-child) {
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #EEE;
+}
+
 .skills-activities-container .last-activities {
   flex-grow: 2;
 }
 
-@media (min-width: 1200px) {
-  .skills-activities-container .skills {}
+.skills-activities-container .last-activities .activity-row:not(:last-of-type) {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #EEE;
+}
+
+.skills-activities-container .last-activities .activity-row p {
+  color: gray;
+}
+
+.skills-activities-container .last-activities .activity-row img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+@media (min-width: 768px) {
+
+  .skills-activities-container .last-activities .activity-row .time {
+    text-align: right;
+  }
+
+  .skills-activities-container .last-activities .activity-row img {
+    margin-right: 10px;
+  }
 }
 
 @media (max-width: 767px) {
-  .skills-activities-container {
-    flex-direction: column;
+  .skills-activities-container .last-activities .activity-row {
+    gap: 10px;
   }
 
 }
