--- a/css/framework.css
+++ b/css/framework.css
@@ -111,12 +111,17 @@
 .pt-10 {
   padding-top: 10px;
 }
-
+.pt-15 {
+  padding-top: 15px;
+}
 .pt-20 {
   padding-top: 20px;
 }
 .pb-10 {
   padding-bottom: 10px;
+}
+.pb-15 {
+  padding-bottom: 15px;
 }
 .pb-20 {
   padding-bottom: 20px;
@@ -285,13 +290,20 @@
 .txt-c {
   text-align: center;
 }
-
 @media (max-width: 767px) {
   .txt-c-mobile {
     text-align: center;
   }
-
 }
+.txt-r {
+  text-align: right;
+}
+@media (max-width: 767px) {
+  .txt-r-mobile {
+    text-align: right;
+  }
+}
+
 
 .fs-0 {
   font-size: 0;
