--- a/css/framework.css
+++ b/css/framework.css
@@ -61,9 +61,11 @@
 .d-grid {
   display: grid;
 }
+
 .gap-5 {
   gap: 5px;
 }
+
 .gap-10 {
   gap: 10px;
 }
@@ -79,9 +81,11 @@
 .grow-1 {
   flex-grow: 1;
 }
+
 .shrink-0 {
   flex-shrink: 0;
 }
+
 .w-full {
   width: 100%;
 }
@@ -111,21 +115,31 @@
 .pt-10 {
   padding-top: 10px;
 }
+
 .pt-15 {
   padding-top: 15px;
 }
+
 .pt-20 {
   padding-top: 20px;
 }
+
+.pt-25 {
+  padding-top: 25px;
+}
+
 .pb-10 {
   padding-bottom: 10px;
 }
+
 .pb-15 {
   padding-bottom: 15px;
 }
+
 .pb-20 {
   padding-bottom: 20px;
 }
+
 .pb-30 {
   padding-bottom: 30px;
 }
@@ -137,12 +151,15 @@
 .pl-10 {
   padding-left: 10px;
 }
+
 .pl-20 {
   padding-left: 20px;
 }
+
 .pl-30 {
   padding-left: 30px;
 }
+
 @media (max-width: 767px) {
   .p-8-mobile {
     padding: 8px;
@@ -176,9 +193,11 @@
 .mt-15 {
   margin-top: 15px;
 }
+
 .mt-25 {
   margin-top: 25px;
 }
+
 .mt-30 {
   margin-top: 30px;
 }
@@ -190,15 +209,19 @@
 .mr-5 {
   margin-right: 5px;
 }
+
 .mr-10 {
   margin-right: 10px;
 }
+
 .mr-15 {
   margin-right: 15px;
 }
+
 .mr-20 {
   margin-right: 20px;
 }
+
 .mb-0 {
   margin-bottom: 0;
 }
@@ -222,12 +245,15 @@
 .mb-20 {
   margin-bottom: 20px;
 }
+
 .mb-25 {
   margin-bottom: 25px;
 }
+
 .mb-30 {
   margin-bottom: 30px;
 }
+
 .ml-5 {
   margin-left: 5px;
 }
@@ -246,9 +272,11 @@
 .bg-blue {
   background-color: var(--blue-color);
 }
+
 .bg-green {
   background-color: var(--green-color);
 }
+
 .bg-orange {
   background-color: var(--orange-color);
 }
@@ -260,9 +288,11 @@
 .c-black {
   color: black;
 }
+
 .c-orange {
   color: var(--orange-color);
 }
+
 .c-white {
   color: var(--aside-color)
 }
@@ -290,14 +320,17 @@
 .txt-c {
   text-align: center;
 }
+
 @media (max-width: 767px) {
   .txt-c-mobile {
     text-align: center;
   }
 }
+
 .txt-r {
   text-align: right;
 }
+
 @media (max-width: 767px) {
   .txt-r-mobile {
     text-align: right;
@@ -316,21 +349,27 @@
 .fs-12 {
   font-size: 12px;
 }
+
 .fs-13 {
   font-size: 13px;
 }
+
 .fs-14 {
   font-size: 14px;
 }
+
 .fs-15 {
   font-size: 15px;
 }
+
 .fs-16 {
   font-size: 16px;
 }
+
 .fs-17 {
   font-size: 17px;
 }
+
 .fs-18 {
   font-size: 18px;
 }
@@ -346,12 +385,15 @@
 .fs-30 {
   font-size: 30px;
 }
+
 .fw-500 {
   font-weight: 500;
 }
+
 .fw-600 {
   font-weight: 600;
 }
+
 .fw-b {
   font-weight: bold;
 }
@@ -389,9 +431,11 @@
 .b-ccc {
   border: 1px solid #ccc;
 }
+
 .bb-eee {
   border-bottom: 1px solid #eee;
 }
+
 /* End Border */
 /* Start Media */
 
@@ -411,21 +455,26 @@
   align-items: center;
   justify-content: center;
 }
+
 .center-flex-inline {
   display: inline-flex;
 
 }
+
 .btn-shape,
 .btn-shape-black {
   padding: 5px 10px;
   border-radius: 6px;
 }
+
 .btn-shape {
   color: white;
 }
+
 .btn-shape-black {
   color: black;
 }
+
 .caret-color-blue:focus {
   caret-color: var(--blue-color);
 }
@@ -433,9 +482,11 @@
 .c-pointer {
   cursor: pointer;
 }
+
 .trans-hov-fx {
   transition: 0.3s;
 }
+
 .trans-hov-fx:hover {
   background-color: var(--blue-alt-color);
 }
