--- a/css/framework.css
+++ b/css/framework.css
@@ -69,7 +69,11 @@
 .gap-10 {
   gap: 10px;
 }
-
+@media (max-width: 767px) {
+  .gap-10-mobile {
+    gap: 10px;
+  }
+}
 .gap-15 {
   gap: 15px;
 }
