--- a/css/master.css
+++ b/css/master.css
@@ -1367,6 +1367,30 @@ main {
 }
 
 /* End Friends Page */
+/* Start Files Page */
+.files.main-wrapper {
+  grid-template-columns: repeat(auto-fill, minmax(183px, 1fr));
+}
+
+
+.grid-flex-container {
+  align-items: flex-start;
+}
+
+.grid-flex-container .upload-file {
+  width: 220px;
+  min-height: 400px;
+}
+
+@media (min-width: 768px) {
+  .grid-flex-container .upload-file {
+    width: 250px;
+    margin-top: 30px;
+    
+  }
+}
+
+/* End Files Page */
 /* Start Animation */
 @keyframes change-color {
   from {
